--- a/config.org
+++ b/config.org
@@ -788,6 +788,39 @@
     :ensure t)
 #+END_SRC
 
+** Java
+#+BEGIN_SRC emacs-lisp
+  (require 'lsp-java)
+  (add-hook 'java-mode-hook 'lsp)
+  (require 'cc-mode)
+
+  (use-package lsp-mode
+    :ensure t)
+  (use-package company-lsp
+    :ensure t)
+  (use-package lsp-ui
+    :ensure t)
+  (use-package lsp-java
+    :ensure t
+    :after lsp
+    :config (add-hook 'java-mode-hook 'lsp))
+  (use-package dap-mode
+    :ensure t
+    :after lsp-mode
+    :config
+    (dap-mode t)
+    (dap-ui-mode t))
+
+  (use-package dap-java :after (lsp-java))
+
+  (require 'lsp-java-boot)
+
+					  ; to enable the lenses
+  (add-hook 'lsp-mode-hook #'lsp-lens-mode)
+  (add-hook 'java-mode-hook #'lsp-java-boot-lens-mode)
+  (setq lsp-java-java-path "st -e java")
+#+END_SRC
+
 * Media
 ** EMMS
    Why use a external media player for listening music when you can do it within Emacs with EMMS?
